--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">help you with homeword</h5>
-                                <p class="text-muted card-text mb-4">i am da homework bos!!!!</p>
+                                <p class="text-muted card-text mb-4">i am da homework bos!!!!</p><button class="btn btn-primary shadow" type="button">Learn more</button>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                                         <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">stay connect&nbsp;</h5>
-                                <p class="text-muted card-text mb-4">i csn help you stay connecct with you friends</p>
+                                <p class="text-muted card-text mb-4">i csn help you stay connecct with you friends</p><button class="btn btn-primary shadow" type="button">Learn more</button>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                         <path d="M7.066 6.76A1.665 1.665 0 0 0 4 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">talk to u</h5>
-                                <p class="text-muted card-text mb-4">i can be a very gud frend trust</p>
+                                <p class="text-muted card-text mb-4">i can be a very gud frend trust</p><button class="btn btn-primary shadow" type="button">Learn more about my coolness</button>
                             </div>
                         </div>
                     </div>
